tests/gen-derivation/derivation/core/trivial 005-neg/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Target type `a` is not a top-level data definition

DerivedGen:10:36--10:39
 06 | 
 07 | %language ElabReflection
 08 | 
 09 | -- `a` is placed *before* the fuel parameter, which is unsupported
 10 | checkedGen : {a : Type} -> Fuel -> Gen a
                                         ^^^

